# presp

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  template.yml
.github/workflows/: presp.yml
examples/bnh/: bnh_evaluator.py  demo.ipynb
examples/cartpole/: cartpole_prescriptor.py  config.yml  demo.ipynb  direct_evaluator.py  esp_evaluator.py  evaluator.py  prescriptor.py
examples/constraints/bnh/: config.yml
examples/constraints/context/: circle_evaluator.py  config.yml  context_evaluator.py  demo.ipynb  direct_evaluator.py  run_context.py  triangle_evaluator.py  utils.py
presp/: evaluator.py  evolution.py  nsga2_utils.py  prescriptor.py
presp/evaluator/: __init__.py  base.py
presp/prescriptor/: __init__.py  base.py  direct.py  nn.py  nn_prescriptor.py  prescriptor.py
tests/: dummy_evaluator.py  dummy_prescriptor.py  test.py  test_cartpole.py  test_cv.py  test_direct.py  test_evolution.py  test_nn.py  test_nsga2.py  test_parallel.py
